data/apps/argocd/traefik-middleware-response-rewriter/httproute-original.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: coder:gateway.networking.k8s.io/HTTPRoute:coder/coder
  creationTimestamp: "2026-08-13T05:12:54Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: coder
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/part-of: coder
    app.kubernetes.io/version: 2.36.0
    helm.sh/chart: coder-2.36.0
  name: coder
  namespace: coder
  resourceVersion: "56176"
  uid: 7664a848-0961-4db7-9cdc-23a907a66aae
spec:
  hostnames:
  - coder.xxx.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: coder
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-08-13T05:12:54Z"
      message: ""
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-13T05:12:54Z"
      message: ""
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: traefik.io/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
